--- a/TODO
+++ b/TODO
@@ -3,9 +3,15 @@ Todo
 
 - Fix: parser can easilly fall into infinite loop, e.g. with missing ';' or mimsing
   destination in asssignment.
+
 - Add more error cases to improve syntax error reporting.
+
 - Write tests for each rule of semantic analysis, check that it behaves well on
   all cases that cause errors and warnings.
+
 - Make sure errors are dealt with properly at each stage of the main function
+
+- TODO: ideally, symbol lookup should be O(1) by creating new tables for
+  each new scope
 
 - Write language feature test cases in a unittest framework.
