--- a/extra/vim/install.txt
+++ b/extra/vim/install.txt
@@ -1,4 +1,4 @@
-To install vim syntax file for "x" language:
+To install vim syntax file for the sire language:
 
 (instructions in vim > :help new-filetype)
 
@@ -6,10 +6,10 @@ mkdir ~/.vim
 mkdir ~/.vim/syntax/
 mkdir ~/.vim/ftdetect/
 
-cp x.vim ~/.vim/syntax/
-vim ~/.vim/ftdetect/x.vim
+cp sire.vim ~/.vim/syntax/
+vim ~/.vim/ftdetect/sire.vim
 
 and add
 
-au BufRead,BufNewFile *.x set filetype=x
+au BufRead,BufNewFile *.sire set filetype=sire
 
