Fixed a few bugs with 'on'. Recursive functions were their own parent and the busyHostHandler wasn't accounting for long instructions. Left to fix: on_chain_threaded_8 is stalling on a single thread.

--- a/TODO
+++ b/TODO
@@ -26,6 +26,10 @@ Todo
 - No system call funcitons can be used by processes moved to another core as the
   slave binaries do not have this linked in.
 
+- ON: Check for a copy of a procedure before receiving.
+
+- ON: Implement referenced variables (or restrict their use with on).
+
 Done
 ====
 
