--- a/TODO
+++ b/TODO
@@ -8,16 +8,13 @@ Todo
 
 - Make sure errors are dealt with properly at each stage of the main function
 
-- TODO: ideally, symbol lookup should be O(1) by creating new tables for
+- Ideally, symbol lookup should be O(1) by creating new tables for
   each new scope
 
 - Write language feature test cases in a unittest framework.
 
 - Make sure all runtime variables can't clash with sire variables - rename all
   with underscores.
-
-- Find out why asm expressions produce syntax errors, e.g. 
-    .set .foo (_cp/4)+3
 
 - Add a CompileStage class to record time and stats etc
 
@@ -27,6 +24,9 @@ Todo
   slave binaries do not have this linked in.
 
 - ON: Implement referenced variables (or restrict their use with on).
+
+- ON: Reclaim procedure and argument data stored in _fp after an 'on' has
+  completed.
 
 Done
 ====
@@ -39,5 +39,11 @@ Done
     proc foo(a[n], val n)
 
 - ON: Check for a copy of a procedure before receiving.
+
+Skipped
+=======
+
+- Find out why asm expressions produce syntax errors, e.g. 
+    .set .foo (_cp/4)+3
 
 
