--- a/README
+++ b/README
@@ -1,9 +1,14 @@
-The sire language and dynamic process creation
-==============================================
+sire
+====
 
-sire is a small language with features to demonstate a mechanims for distributed
-and dynamic creation of processes in a parallel system. It is targeted at the
-XMOS XS1 architecture, which is general-purpose and has low-level support for
-concurrency and communications.
+sire is a small block-structured, imperative language with features to
+demonstate a mechanims for distributed and dynamic creation of processes in and
+over a parallel system. It targets the XMOS XS1 architecture, which is
+general-purpose and has low-level support for concurrency and parallelism.
 
 More to come soon.
+
+Dependencies
+------------
+
+ - Python 3.2 (latest)
